--- a/app/src/main/res/color/lolite_tint_selected.xml
+++ b/app/src/main/res/color/lolite_tint_selected.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 20.01.20 19:40
+  ~ Last modified 12.02.20 19:20
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -11,8 +11,7 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<item android:alpha="1.0" android:color="@color/white" android:state_checked="true"/>
-	<item android:alpha="0.6" android:color="@color/white"/>
+	<item android:color="@color/lolite" android:state_selected="true"/>
+	<item android:alpha="0.6" android:color="@color/lolite"/>
 
 </selector>
-
