--- a/app/src/main/res/color/white_tint_checked.xml
+++ b/app/src/main/res/color/white_tint_checked.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 06.02.20 15:36
+  ~ Last modified 21.01.20 19:56
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -11,7 +11,8 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<item android:color="@color/lolite" android:state_selected="true"/>
-	<item android:alpha="0.6" android:color="@color/lolite"/>
+	<item android:alpha="1.0" android:color="@color/white" android:state_checked="true"/>
+	<item android:alpha="0.6" android:color="@color/white"/>
 
 </selector>
+
