--- a/app/src/main/res/drawable/ic_exit_24dp.xml
+++ b/app/src/main/res/drawable/ic_exit_24dp.xml
@@ -1,20 +1,20 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 23.02.20 16:58
+  ~ Last modified 23.02.20 17:05
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
   ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
 
-<vector android:height="24dp"
-    android:tint="#FFFFFF"
+<vector
+    android:height="24dp"
     android:viewportHeight="24.0"
     android:viewportWidth="24.0"
     android:width="24dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <path android:fillColor="#FF000000" android:pathData="M12,4l-1.41,1.41L16.17,11H4v2h12.17l-5.58,5.59L12,20l8,-8z"/>
+    <path android:fillColor="@color/white" android:pathData="M10.09,15.59L11.5,17l5,-5 -5,-5 -1.41,1.41L12.67,11H3v2h9.67l-2.58,2.59zM19,3H5c-1.11,0 -2,0.9 -2,2v4h2V5h14v14H5v-4H3v4c0,1.1 0.89,2 2,2h14c1.1,0 2,-0.9 2,-2V5c0,-1.1 -0.9,-2 -2,-2z"/>
 
 </vector>
