--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 26.01.20 17:59
+  ~ Last modified 25.02.20 16:00
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -80,50 +80,50 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent" >
 
-			<TextView
+			<com.google.android.material.textview.MaterialTextView
 				android:id="@+id/tvProfileAboutHeader"
 				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 				android:padding="@dimen/general_margin_16"
 
 				android:text="About"
-				android:textSize="22sp"
+				android:textSize="24sp"
 				style="@style/medium_text_white85op"
 
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
+				app:layout_constraintStart_toStartOf="@id/guidelineStart"
 				app:layout_constraintTop_toTopOf="parent"
+				app:layout_constraintBottom_toTopOf="@id/tvProfileAboutText"
 				/>
 
-			<TextView
+			<com.google.android.material.textview.MaterialTextView
 				android:id="@+id/tvProfileAboutText"
 				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 				android:lineSpacingExtra="10sp"
-				android:paddingStart="@dimen/general_margin_16"
-				android:paddingEnd="@dimen/general_margin_16"
 
-				android:text="TEST\nTEST\nTEST\nTEST\nTEST\nTEST\nTEST\nTEST\nTEST\nTEST\nTEST\n"
-				android:textSize="16sp"
+				android:text="@string/default_profile_about_text"
+				android:textSize="18sp"
 				style="@style/regular_text_white85op"
 
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
+				app:layout_constraintStart_toStartOf="@id/guidelineStart"
 				app:layout_constraintTop_toBottomOf="@id/tvProfileAboutHeader"
+				app:layout_constraintBottom_toTopOf="@id/tvProfileWantToGoHeader"
 				/>
 
-			<TextView
+			<com.google.android.material.textview.MaterialTextView
 				android:id="@+id/tvProfileWantToGoHeader"
 				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 				android:padding="@dimen/general_margin_16"
 
 				android:text="Хочу сходить"
-				android:textSize="22sp"
+				android:textSize="24sp"
 				style="@style/medium_text_white85op"
 
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
+				app:layout_constraintStart_toStartOf="@id/guidelineStart"
 				app:layout_constraintTop_toBottomOf="@id/tvProfileAboutText"
 				app:layout_constraintBottom_toTopOf="@id/rvProfileWantToGoList"
 				/>
@@ -132,6 +132,7 @@
 				android:id="@+id/rvProfileWantToGoList"
 				android:layout_width="0dp"
 				android:layout_height="wrap_content"
+				android:clipToPadding="false"
 				android:padding="@dimen/general_margin_8"
 				android:orientation="horizontal"
 				android:visibility="visible"
@@ -141,8 +142,26 @@
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintTop_toBottomOf="@id/tvProfileWantToGoHeader"
+				app:layout_constraintBottom_toBottomOf="parent"
 
 				tools:listitem="@layout/fragment_profile_places_rv_item"/>
+
+
+			<!-- left padding -->
+			<androidx.constraintlayout.widget.Guideline
+				android:id="@+id/guidelineStart"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:orientation="vertical"
+				app:layout_constraintGuide_begin="@dimen/general_margin_8" />
+
+			<!-- right padding -->
+			<androidx.constraintlayout.widget.Guideline
+				android:id="@+id/guidelineEnd"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:orientation="vertical"
+				app:layout_constraintGuide_end="@dimen/general_margin_8" />
 
 		</androidx.constraintlayout.widget.ConstraintLayout>
 
